pom.xml update and GameTest