@@ -9,6 +9,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -116,7 +117,7 @@ public class GameTest {
 
         game.generateMoves(b, moves);
 
-        assertEquals(List.of(2, 5, 6, 7, 8), moves);
+        assertEquals(Arrays.asList(2, 5, 6, 7, 8), moves);
     }
 
     @Test
